<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:fontFamily="@font/ys_display_medium"
        android:text="@string/title_text"
        android:textColor="@color/white"
        android:textFontWeight="500"
        android:textSize="@dimen/button_textSize" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_search"
            style="@style/main_buttonStyle"
            android:text="@string/search_btn_text"
            app:icon="@drawable/search" />

        <Button
            android:id="@+id/button_media"
            style="@style/main_buttonStyle"
            android:text="@string/media_btn_text"
            app:icon="@drawable/library" />

        <Button
            android:id="@+id/button_settings"
            style="@style/main_buttonStyle"
            android:text="@string/settings_title"
            app:icon="@drawable/settings" />

    </LinearLayout>

</LinearLayout>