<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:backgroundTint="@android:color/transparent"
    app:cardBackgroundColor="@android:color/transparent"
    app:cardCornerRadius="0dp"
    app:cardElevation="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="@dimen/padding_liner_card">

        <ImageView
            android:id="@+id/trackImageView"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:clipToOutline="true"
            android:scaleType="centerCrop"
            android:src="@drawable/placeholder"
            android:contentDescription="@string/todo" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/margin_liner_card"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/trackNameView"
                style="@style/trackCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_reply" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/artistNameView"
                    style="@style/artistTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/the_beatles" />

                <ImageView
                    style="@style/dot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/dot_track_card"
                    android:contentDescription="@string/todo" />

                <TextView
                    android:id="@+id/trackTimeView"
                    style="@style/artistTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_5_12" />
            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:id="@+id/arrow_go_song"
            style="@style/arrow_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/arrow_recycler"
            android:contentDescription="@string/todo" />

    </LinearLayout>
</androidx.cardview.widget.CardView>