<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_background"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/button_arrowBack_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/todo"
                android:src="@drawable/arrow"
                app:tint="@color/arrowColor" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:fontFamily="@font/ys_display_medium"
                android:text="@string/search_textView"
                android:textColor="@color/textColorTheme"
                android:textSize="22sp" />

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="24dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/inputEditText"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:autofillHints=""
                android:background="@drawable/custom_edittext"
                android:drawableStart="@drawable/search_in_search"
                android:drawablePadding="8dp"
                android:fontFamily="@font/ys_display_regular"
                android:hint="@string/search_textView"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:lineHeight="18.75dp"
                android:maxLines="1"
                android:paddingStart="12dp"
                android:paddingEnd="0dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/textColorHint"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/clearIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:contentDescription="@string/todo"
                android:paddingStart="0dp"
                android:paddingEnd="5dp"
                android:src="@drawable/baseline_clear_24"
                android:visibility="gone" />
        </FrameLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/historyMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="20dp"
                    android:fontFamily="@font/ys_text_medium"
                    android:text="@string/titleText_historySearch"
                    android:textColor="@color/color_placeholder"
                    android:textSize="19sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rcViewHistory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/buttonClearHistory"
                    style="@style/clear_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="24dp"
                    android:text="@string/ButtonClearHistory_text" />


            </LinearLayout>

        </ScrollView>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/progressBar"
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="90dp"
                android:indeterminate="true"
                android:progress="45"
                android:visibility="gone"
                app:indicatorColor="@color/main_color" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcViewSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


            </androidx.recyclerview.widget.RecyclerView>

            <LinearLayout
                android:id="@+id/massageNotFound"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="86dp"
                android:orientation="vertical"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/imageNotFound"
                    android:src="@drawable/placeholder_nothing_found"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginVertical="16dp" />

                <TextView
                    style="@style/text_placeholder"
                    android:id="@+id/placeholderMessage"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/ys_text_medium"
                    android:textAlignment="center"
                    android:textSize="19sp"
                    android:text="@string/placeholderNothing_text"/>

            </LinearLayout>


            <LinearLayout
                android:id="@+id/massageNotInternet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="86dp"
                android:orientation="vertical"
                android:visibility="gone">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginVertical="16dp"
                    android:src="@drawable/placeholder_error_network"/>

                <TextView
                    style="@style/text_placeholder"
                    android:id="@+id/placeholderMessageNotInternet"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/ys_text_medium"
                    android:textAlignment="center"
                    android:textSize="19sp"
                    tools:text="Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету" />

                <Button
                    android:id="@+id/btResetSearch"
                    style="@style/placeholder_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="24dp"
                    android:fontFamily="@font/ys_display_medium"
                    android:text="@string/button_placeholderErrorNetwork"
                    android:textSize="14sp" />


            </LinearLayout>


        </FrameLayout>

    </LinearLayout>
</FrameLayout>


